# Confio

./: .codex_cusd_deploy.out  .env  .env.algorand  .env.backup_20250813_214940  .env.example  .env.mainnet  .env.testnet  .env.testnet.bak  .gitattributes  .gitignore  .pre-commit-config.yaml  .yarnrc  ACHIEVEMENTS.md  ACHIEVEMENTS_FINAL.md  AGENTS.md  ALGORAND_SPONSORED_TRANSACTIONS.md  ANDROID_12_OAUTH_FIX.md  ANDROID_OAUTH_FIX.md  APPLE_SIGNIN_IMMEDIATE_SOLUTION.md  APPLE_SIGNIN_SOLUTION.md  APTOS_KEYLESS_APPROACH.md  APTOS_KEYLESS_DETERMINISTIC_ADDRESSES.md  APTOS_KEYLESS_QUICKSTART.md  APTOS_KEYLESS_SETUP.md  CLAUDE.md  CONTACT_SYSTEM_SETUP.md  CORRECT_NON_CUSTODIAL_FLOW.md  DESIGN.md  Dockerfile  FIX_WEB3AUTH_LOGIN_ERROR.md  GOOGLE_OAUTH_ANDROID_FIX.md  HOW_ALGORAND_ADDRESS_UPDATES.md  Julian_accessKeys.csv  Julian_credentials.csv  LICENSE  Makefile  NEXT_STEPS_ACTION_PLAN.md  NON_CUSTODIAL_IMPLEMENTATION.md  OAUTH_FLOW_DEBUG.md  OAUTH_JWT_FIX.md  (+256 more)
.claude/: launch.json
achievements/: admin.py  admin_views.py  apps.py  models.py  referral_security.py  signals.py
apps/: .env  .env.mainnet  .env.testnet  .env.web3auth  .eslintrc.js  .gitignore  .watchmanconfig  App.tsx  PLATFORM_SETUP.md  README.md  app.json  babel.config.js  base64.js  bootstrap.ts  centralize_colors.js  centralize_layout.js  firebase.json  index.js  metro.config.js  missing_colors.txt  package-lock.json  package.json  polyfills.js  react-native-fast-base64.js  react-native.config.js  tsconfig.json
apps/android/app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.bak  confio.cpp
aptos-keyless-bridge/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  GITHUB_DISCUSSION.md  README.md  docker-compose.yml  package-lock.json  package.json  start.sh  test-v2-flow.js  tsconfig.json
auth/: apps.py
bcs-zklogin-service/: README.md  package-lock.json  package.json
blockchain/: COIN_STRATEGY.md  README.md  ZKLOGIN_ARCHITECTURE.md  __init__.py  account_funding_service.py  admin.py  algorand_account_manager.py  algorand_client.py  algorand_config.py  algorand_sponsor_service.py  apple_signin_handler.py  apps.py  aptos_balance_service.py  aptos_sponsor_service.py  aptos_sponsor_service.py.bak  aptos_transaction_builder.py  aptos_transaction_manager.py  async_transaction_builder.py  auto_swap_state.py  balance_service.py  blockchain_settings.py  celery_schedules.py  coin_management.py  constants.py  conversion_executor.py  cusd_metrics.py  cusd_service.py  cusd_transaction_builder.py  evm_kms_signer.py  graphql_integration.py  humanitarian_transaction_builder.py  invite_send_mutations.py  invite_send_transaction_builder.py  kms_manager.py  models.py  mutations.py  option_b_rebuild.py  p2p_trade_mutations.py  p2p_trade_transaction_builder.py  payment_mutations.py  (+25 more)
config/: admin_dashboard.py  admin_mixins.py  asgi.py  celery.py  consumers.py  context_processors.py  firebase-service-account.json  logging.py  middleware.py  routing.py  schema.py  secrets.py  settings.py  settings_local_sqlite.py  sitemaps.py  tests.py  urls.py  utils.py  (+1 more)
(+2050 files in other folders)
